// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: MediaObject -  renders 1`] = `
<div
  className="media"
>
  <div
    className="media-body"
  >
    <h3
      className=""
    >
      render-test
    </h3>
    <p />
  </div>
</div>
`;

exports[`Component: MediaObject -  renders a MediaObject with an icon 1`] = `
<div
  className="media"
>
  <div
    className="media-img"
  >
    

     
    <i
      className="material-icons"
    >
      home
    </i>
     
    

     
  </div>
  <div
    className="media-body"
  >
    <h3
      className=""
    >
      render-test
    </h3>
    <p />
  </div>
</div>
`;

exports[`Component: MediaObject -  renders a large MediaObject 1`] = `
<div
  className="media media-lg"
>
  <div
    className="media-body"
  >
    <h2
      className=""
    >
      render-test
    </h2>
    <p />
  </div>
</div>
`;

exports[`Component: MediaObject -  renders a muted MediaObject 1`] = `
<div
  className="media"
>
  <div
    className="media-body"
  >
    <h3
      className="text-muted"
    >
      render-test
    </h3>
    <p />
  </div>
</div>
`;

exports[`Component: MediaObject -  renders a small MediaObject 1`] = `
<div
  className="media media-sm"
>
  <div
    className="media-body"
  >
    <h4
      className=""
    >
      render-test
    </h4>
    <p />
  </div>
</div>
`;

exports[`Component: MediaObject -  throws an error if heading is not defined 1`] = `
<div
  className="media"
>
  <div
    className="media-body"
  >
    <h3
      className=""
    />
    <p />
  </div>
</div>
`;
